# allium-deck-python

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: wheels.yml
python/_allium_deck_native/: __init__.py
python/allium_deck/: __init__.py
python/sekai_deck_recommend_cpp/: __init__.py  __init__.pyi  _models.py
src/: lib.rs
tests/: test_full_api_integration.py  test_lunabot_contract.py  test_native_integration.py  test_release_workflow.py
