[package]
name = "allium-deck-python"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
allium-deck = { git = "https://github.com/empty-sekai/allium-deck.git", rev = "41495933b2afb86b49242b6cd769f32810db7308" }
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
