[package]
name = "allium-deck-python"
version = "0.0.2"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
allium-deck = { version = "0.0.5", git = "https://github.com/empty-sekai/allium-deck.git", rev = "b799502a44a71488e82463ccfa607b2143600b23" }
pyo3 = { version = "0.23", features = ["abi3-py310"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
