[package]
name = "allium-deck-python"
version = "0.0.3"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
allium-deck = { version = "0.0.6", git = "https://github.com/empty-sekai/allium-deck.git", rev = "5fd93b0ac299716c90380d416cfaeb3a01b036f4" }
pyo3 = { version = "0.23", features = ["abi3-py310"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
